fixing bullet list too large

--- a/sass/moons/_bulleted-list.scss
+++ b/sass/moons/_bulleted-list.scss
@@ -113,7 +113,7 @@
 				padding-left: 10px;
 			}
 			.bulleted-list__title {
-				font-size: 1.3em;
+				font-size: 1.1em;
 				font-family: $fam-heading;
 
 				@include bp($s-mobile){
